<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.Main.fragments.Home.HomeFragment">

    <TextView
        android:id="@+id/book_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/book_store"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/image_recycleview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/book_tv"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"/>

    <TextView
        android:id="@+id/feature_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/featured"
        android:textSize="30sp"
        android:textColor="#000000"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/image_recycleview"
        android:layout_marginTop="8dp"/>

    <TextView
        android:id="@+id/see_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_recycleview"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        android:text="@string/see_all"
        android:textSize="20sp"
        android:textColor="#000000"
        android:drawableEnd="@drawable/ic_keyboard_arrow_right"
        android:drawableRight="@drawable/ic_keyboard_arrow_right"
        android:layout_marginTop="8dp"
        app:layout_constraintBaseline_toBaselineOf="@id/feature_tv"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginTop="8dp"
        android:id="@+id/book_recycleview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/feature_tv"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guide_end"/>
    

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95"/>

</androidx.constraintlayout.widget.ConstraintLayout>