<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.Main.fragments.profile.ProfileUserFragment">

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="30sp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/log_out"
        android:textColor="#000000"
        android:textSize="20sp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toTopOf="parent"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/image_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/log_out"
        app:layout_constraintBottom_toBottomOf="@id/guide_hor"
        android:src="@drawable/app_icon"
        android:layout_marginTop="24dp" />

    <TextView
        android:id="@+id/profile_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/image_profile"
        android:layout_marginTop="16dp"
        android:text="@string/username"
        android:textSize="30sp"
        android:textColor="#000000"
        android:gravity="center"/>

    <TextView
        android:id="@+id/profile_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/profile_username"
        android:layout_marginTop="16dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center"/>

    <TextView
        android:id="@+id/profile_mobile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toBottomOf="@id/profile_email"
        android:layout_marginTop="8dp"
        android:text="Mobile"
        android:textSize="20sp"
        android:textColor="#000000"
        android:gravity="center"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_hor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".3" />

</androidx.constraintlayout.widget.ConstraintLayout>

<!--
 <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_profile"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="30sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/log_out"
            android:textColor="#000000"
            android:textSize="25sp" />

    </com.google.android.material.navigation.NavigationView>
    -->